--- a/views/crear-doctor.html
+++ b/views/crear-doctor.html
@@ -29,8 +29,13 @@
           <label for="specialty">Especialidad:</label>
           <select class="form-control" name="specialty" id="specialty" required>
             <option value="medicina_general">Medicina General</option>
-            <option value="pediatria">Pediatría</option>
+            <option value="medicina_interna">Medicina interna</option>
             <option value="cardiologia">Cardiología</option>
+            <option value="dermatologia">Dermatología</option>
+            <option value="rehabilitacion_fisica">Rehabilitación física</option>
+            <option value="psicologia">Psicología</option>
+            <option value="odontologia">Odontología</option>
+            <option value="radiologia">Radiología</option>
           </select>
         </div>
       </div>
